--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -265,16 +265,25 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li class="active">
-                                <a href="#"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard </span><span class="fa arrow"></span><span class="label label-rouded pull-right p1-bg note-icon">6</span></a>
-                                <ul class="nav nav-second-level collapse">
-                                    <li><a href="index.html">Inventario</a></li>
-                                    <li><a href="index-2.html">Facturción</a></li>
-                                    <li><a href="index-3.html">Cobranza</a></li>
-                                </ul>
+                            <li class="active p1-bg">
+                                <a href="/"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard </span><span class="label label-rouded pull-right p3-bg note-icon">New 40+</span></a>
                             </li>
-                            <li class="p1-bg">
-                                <a href="widgets.html"><i class="fa fa-cog"></i> <span class="nav-label">Widgets </span><span class="label label-rouded pull-right p3-bg note-icon">New 40+</span></a>
+                            <li class="active">
+                                <a href="#"><i class="fa fa-cog"></i> <span class="nav-label">Modulos </span><span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level collapse">
+                                    <li><a href="/app/proformas/"><i class="fa fa-shopping-basket"></i> Proformas</a></li>
+                                    <li><a href="/app/facturacion/"><i class="fa fa-shopping-cart"></i> Facturción</a></li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-money"></i> Cartera <span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <li><a href="/app/cobranza/"><i class="fa fa-usd"></i> Cobranza</a></li>
+                                                <li><a href="/app/lrecibo_provicional/" style="font-size: 12px;"><i class="fa fa-file-text"></i> Recibos Provicionales</a></li>
+                                            </li>
+                                        </ul>
+                                    </li>
+
+                                </ul>
                             </li>
                             <li>
                                 <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Mailbox </span><span class="fa arrow"></span></a>
