--- a/app/templates/inventario/proformas.html
+++ b/app/templates/inventario/proformas.html
@@ -1,4 +1,7 @@
 {% extends "app/index.html" %}
+{% block title-bloc %}
+    Listado de Proformas
+{% endblock title-bloc %}
 {% block css-content %}
     <link href="/static/app/css/sweetalert.css" rel="stylesheet">
 {% endblock css-content %}
