--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -3383,3 +3383,151 @@ Tooltips
     padding-right: 5px;
     padding-left: 5px;
 }
+
+
+/* Card */
+.card {
+    overflow: hidden;
+}
+.card {
+    position: relative;
+    margin: 0.5rem 0 1rem 0;
+    background-color: #fff;
+    transition: box-shadow .25s;
+    border-radius: 2px;
+	    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+.card .card-content {
+    padding: 20px;
+    border-radius: 0 0 2px 2px;
+}
+.white-text {
+    color: #fff !important;
+}
+.card .card-content .card-title {
+    line-height: 48px;
+}
+.card .card-title {
+    font-size: 24px;
+    font-weight: 300;
+}
+.card .card-content p {
+    margin: 0;
+    color: inherit;
+}
+.light-blue {
+    background-color: #03a9f4 !important;
+}
+.collection .collection-item {
+    background-color: #fff;
+    line-height: 1.5rem;
+    padding: 10px 20px;
+    margin: 0;
+    border-bottom: 1px solid #e0e0e0;
+}
+.collection {
+    margin: 0.5rem 0 1rem 0;
+    border: 1px solid #e0e0e0;
+    border-radius: 2px;
+    overflow: hidden;
+    position: relative;
+	padding:0px;
+}
+.center-align {
+    text-align: center;
+}
+.amber.darken-2 {
+    background-color: #ffa000 !important;
+}
+.collection .collection-item.avatar {
+    min-height: 84px;
+    padding-left: 72px;
+    position: relative;
+}
+.collection .collection-item.avatar .img-circle {
+    position: absolute;
+    width: 42px;
+    height: 42px;
+    overflow: hidden;
+    left: 15px;
+    display: inline-block;
+    vertical-align: middle;
+}
+.collection.with-header .collection-header {
+    background-color: #fff;
+    border-bottom: 1px solid #e0e0e0;
+    padding: 10px 20px;
+}
+.cyan {
+    background-color: #00bcd4 !important;
+}
+textarea.materialize-textarea {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: 1rem;
+    margin: 0 0 20px 0;
+    padding: 0;
+    box-shadow: none;
+    box-sizing: content-box;
+    transition: all 0.3s;
+}
+textarea.materialize-textarea {
+    overflow-y: hidden;
+    padding: .8rem 0 1.6rem 0;
+    resize: none;
+    min-height: 3rem;
+}
+
+
+/* Dashboard analytic */
+.border-top-gray, .border-top-grey, .border-top-green, .border-top-light-green, .border-top-blue, .border-top-light-blue, .border-top-orange, .border-top-light-orange, .border-top-red, .border-top-light-red, .border-top-purple, .border-top-light-purple, .border-top-pink, .border-top-light-pink {
+    border-top-width: 8px !important;
+}
+.panel-white {
+    border: 1px solid #dddddd;
+}
+.panel {
+    border-radius: 0;
+    margin-bottom: 30px;
+}
+.border-top-green {
+    border-top: 4px solid #27ae60 !important;
+}
+.panel {
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
+.jumbo {
+    color: green;
+    font-size: 100px;
+    line-height: 100px;
+    margin: 0 0 10px;
+    display: block;
+}
+.border-top-blue {
+    border-top: 4px solid #2980b9 !important;
+}
+.panel-body ol li .lives-saved {
+    color: #86cfef;
+}
+.border-top-orange {
+    border-top: 4px solid #e82c0c !important;
+}
+.panel-body.bottom-stats ol li .lives-saved {
+    color: #ff962e;
+}
+.border-top-gray, .border-top-grey {
+    border-top: 4px solid #909090 !important;
+}
+.panel-body ol {
+    padding: 0 0 0 15px;
+}
