--- a/app/templates/app/cobranza_cliente.html
+++ b/app/templates/app/cobranza_cliente.html
@@ -26,104 +26,51 @@
 
 {% block cuerpo %}
     <div class="row">
-        <div class="col-sm-12">
-            <div class="panel panel-card recent-activites">
-                <!-- Start .panel -->
-                <div class="panel-heading">
-                    <h4 class="panel-title">Datos Generales</h4>
-                    <div class="panel-actions">
-                        <a href="#" class="panel-action panel-action-toggle" data-panel-toggle></a>
-                        <a href="#" class="panel-action panel-action-dismiss" data-panel-dismiss></a>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <input id="clienteid" type="hidden" value="{{ cliente.id }}">
-                    <div class="row">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Identificación:</label>
-                            <div class="col-sm-10">
-                                <input class="form-control" disabled="true" placeholder="identificacion:" type="text" value="{{ cliente.identificacion }}">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hr-line-dashed"></div>
-                    <div class="row">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Nombre:</label>
-                            <div class="col-sm-10">
-                                <input class="form-control" disabled="true" placeholder="Nombre:" type="text" value="{{ cliente.nombre }}">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="hr-line-dashed"></div>
-                    <div class="row">
-                        <div class="col-md-6 col-sm-12">
+        <div class="col-md-4">
+            <input type="hidden" name="clienteid" id="clienteid" value="{{ cliente.id }}">
+            <div class="panel panel-white border-top-blue">
+                  <div class="panel-heading">
+                    <h3>Datos Generales</h3>
+                    <h4>{{ cliente.nombre }}</h4>
+                  </div>
+                  <div class="panel-body" style="height:370px">
+                    <ul id="profile-page-about-details" class="collection z-depth-1">
+                          <li class="collection-item">
                             <div class="row">
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">Telefono:</label>
-                                    <div class="col-sm-10">
-                                        <input class="form-control" disabled="true" placeholder="Telefono:" type="text" value="{{ cliente.telefono }}">
-                                    </div>
-                                </div>
+                              <div class="col-sm-5 grey-text darken-1"><i class="mdi-action-wallet-travel"></i> Identificación</div>
+                              <div class="col-sm-7 grey-text text-darken-4 right-align">{{ cliente.identificacion }}</div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-sm-12">
+                          </li>
+                          <li class="collection-item">
                             <div class="row">
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">Celular:</label>
-                                    <div class="col-sm-10">
-                                        <input class="form-control" disabled="true" placeholder="Celular:" type="text" value="{{ cliente.celular }}">
-                                    </div>
-                                </div>
+                              <div class="col-sm-5 grey-text darken-1"><i class="mdi-social-poll"></i> Telefono</div>
+                              <div class="col-sm-7 grey-text text-darken-4 right-align">{{ cliente.telefono }}</div>
                             </div>
-                        </div>
-
-                    </div>
-                    <div class="hr-line-dashed"></div>
-                    <div class="row">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Dirección:</label>
-                            <div class="col-sm-10">
-                                <input class="form-control" disabled="true" placeholder="Dirección:" type="text" value="{{ cliente.direccion }}">
+                          </li>
+                          <li class="collection-item">
+                            <div class="row">
+                              <div class="col-sm-5 grey-text darken-1"><i class="mdi-social-domain"></i> Celular</div>
+                              <div class="col-sm-7 grey-text text-darken-4 right-align">{{ cliente.celular }}</div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="hr-line-dashed"></div>
-                    <div class="row">
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Contacto:</label>
-                            <div class="col-sm-10">
-                                <input class="form-control" disabled="true" placeholder="Contacto:" type="text" value="{{ cliente.contacto }}">
+                          </li>
+                          <li class="collection-item">
+                            <div class="row">
+                              <div class="col-sm-5 grey-text darken-1"><i class="mdi-social-cake"></i> Dirección</div>
+                              <div class="col-sm-7 grey-text text-darken-4 right-align">{{ cliente.direccion }}</div>
                             </div>
-                        </div>
-                    </div>
-                </div>
+                          </li>
+                            <li class="collection-item">
+                            <div class="row">
+                              <div class="col-sm-5 grey-text darken-1"><i class="mdi-social-cake"></i> Contacto</div>
+                              <div class="col-sm-7 grey-text text-darken-4 right-align">{{ cliente.contacto }}</div>
+                            </div>
+                          </li>
+                        </ul>
+                  </div>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-6 col-sm12">
-            <div class="panel panel-card recent-activites">
-                <!-- Start .panel -->
-                <div class="panel-heading">
-                    <h4 class="panel-title">Documentos x Cobrar</h4>
-                    <div class="panel-actions">
-                        <a href="#" class="panel-action panel-action-toggle" data-panel-toggle></a>
-                        <a href="#" class="panel-action panel-action-dismiss" data-panel-dismiss></a>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <div class="nano has-scrollbar" style="height:440px">
-                        <div class="nano-content pad-all" tabindex="0" style="right: -17px;">
-                            <div id="content-facturas-pendientes"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-6 col-sm12">
-            <div class="panel panel-card recent-activites ">
+        <div class="col-md-4">
+            <div class="panel panel-card recent-activites border-top-orange ">
                 <!-- Start .panel -->
                 <div class="panel-heading">
                     <h4 class="panel-title">Comentarios</h4>
@@ -133,16 +80,14 @@
                     </div>
                 </div>
                 <div class="panel-body">
-                    <div class="nano has-scrollbar" style="height:240px">
+                    <div class="nano has-scrollbar" style="height:290px">
                         <div class="nano-content pad-all" tabindex="0" style="right: -17px;">
                             <div id="conten-comentarios"></div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="form-horizontal">
+                            <hr>
+                            <div class="form-horizontal">
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <textarea id="post-comment" name="post-comment" rows="4" placeholder="Su comentario aquí.." class="form-control"></textarea>
+                                <textarea id="post-comment" name="post-comment" rows="2" placeholder="Su comentario aquí.." class="form-control"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -151,8 +96,40 @@
                             </div>
                         </div>
                     </div>
+                        </div>
+
+                    </div>
+
                 </div>
             </div>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-card recent-activites border-top-green">
+                <!-- Start .panel -->
+                <div class="panel-heading">
+                    <h4 class="panel-title">Documentos x Cobrar</h4>
+                    <div class="panel-actions">
+                        <a href="#" class="panel-action panel-action-toggle" data-panel-toggle></a>
+                        <a href="#" class="panel-action panel-action-dismiss" data-panel-dismiss></a>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="nano has-scrollbar" style="height:340px">
+                        <div class="nano-content pad-all" tabindex="0" style="right: -17px;">
+                            <div id="content-facturas-pendientes"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-6 col-sm12">
+
+        </div>
+        <div class="col-lg-6 col-sm12">
+
         </div>
     </div>
 
@@ -238,7 +215,8 @@
         $("#btn-guardar-gestion").on('click',function () {
             guardarGestion();
         })
-    })
+        $('body').addClass("mini-navbar");
+    });
     function loadDatePicker() {
         $(".datetimepicker").datetimepicker({
             format: 'YYYY-MM-DD'
