--- a/app/templates/app/cobranza_cliente.html
+++ b/app/templates/app/cobranza_cliente.html
@@ -30,8 +30,9 @@
             <input type="hidden" name="clienteid" id="clienteid" value="{{ cliente.id }}">
             <div class="panel panel-white border-top-blue">
                   <div class="panel-heading">
-                    <h3>Datos Generales</h3>
+                    <h3>Datos Generales <a class="pull-right" href="#" onclick="mostrarComentarios({{ cliente.id }}); return false;" class="tooltipstered" title="Agregue su comentario"> <i class="fa fa-comment fa-2x"></i></a></h3>
                     <h4>{{ cliente.nombre }}</h4>
+
                   </div>
                   <div class="panel-body" style="height:370px">
                     <ul id="profile-page-about-details" class="collection z-depth-1">
@@ -70,7 +71,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="panel panel-card recent-activites border-top-orange ">
+            {% comment %}<div class="panel panel-card recent-activites border-top-orange panel-collapsed">
                 <!-- Start .panel -->
                 <div class="panel-heading">
                     <h4 class="panel-title">Comentarios</h4>
@@ -79,7 +80,7 @@
                         <a href="#" class="panel-action panel-action-dismiss" data-panel-dismiss></a>
                     </div>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="display: none">
                     <div class="nano has-scrollbar" style="height:290px">
                         <div class="nano-content pad-all" tabindex="0" style="right: -17px;">
                             <div id="conten-comentarios"></div>
@@ -100,6 +101,23 @@
 
                     </div>
 
+                </div>
+            </div>{% endcomment %}
+            <div class="panel panel-card recent-activites border-top-orange panel-collapsed">
+                <!-- Start .panel -->
+                <div class="panel-heading">
+                    <h4 class="panel-title">Gestiones</h4>
+                    <div class="panel-actions">
+                        <a href="#" class="panel-action panel-action-toggle" data-panel-toggle></a>
+                        <a href="#" class="panel-action panel-action-dismiss" data-panel-dismiss></a>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="float-right right align-right">
+                         <a id="btnAgregarGestion" style="float: right" class="btn btn-success btn-3d" href="javascript:void(0)"><i class="fa fa-plus fa-fw"></i> Agregar gestion</a>
+                    </div>
+                    <hr/>
+                    <div id="content-gestiones"></div>
                 </div>
             </div>
         </div>
@@ -122,6 +140,8 @@
                 </div>
             </div>
         </div>
+
+
     </div>
 
     <div class="row">
@@ -135,24 +155,7 @@
 
     <div class="row">
         <div class="col-sm-12">
-            <div class="panel panel-card recent-activites">
-                <!-- Start .panel -->
-                <div class="panel-heading">
-                    <h4 class="panel-title">Visitas / Promesas de pago / Gestiones</h4>
-                    <div class="panel-actions">
-                        <a href="#" class="panel-action panel-action-toggle" data-panel-toggle></a>
-                        <a href="#" class="panel-action panel-action-dismiss" data-panel-dismiss></a>
-                    </div>
-                </div>
-                <div class="panel-body">
-                    <div class="float-right right align-right">
-                         <a id="btnAgregarGestion" style="float: right" class="btn btn-success btn-3d" href="javascript:void(0)"><i class="fa fa-plus fa-fw"></i> Agregar gestion</a>
-                    </div>
 
-                    <hr/>
-                    <div id="content-gestiones"></div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -189,6 +192,41 @@
             </div>
         </div>
     </div>
+    <div class="modal fade in" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title">Comentarios</h4>
+                <small>Registre su comentario en la parte inferior</small>
+            </div>
+            <div class="modal-body">
+                <div class="nano has-scrollbar" style="height:240px">
+                    <div class="nano-content pad-all" tabindex="0" style="right: -17px;">
+                        <div id="conten-comentarios"></div>
+                    </div>
+                </div>
+                <hr/>
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <textarea id="post-comment" name="post-comment" rows="2" placeholder="Su comentario aquí.." class="form-control"></textarea>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <button id="comentar" class="btn btn-effect-ripple btn-primary">Enviar comentario</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+    <input id="clienteid" type="hidden">
+</div>
 {% endblock cuerpo %}
 {% block scripts-block %}
     <script src="/static/app/js/data-tables/jquery.dataTables.js"></script>
@@ -202,7 +240,9 @@
     $(document).ready(function () {
         $("#comentar").on('click',function () {
             comentar();
-        })
+        });
+        $(".tooltipstered").tooltip();
+
         cargarComentarios();
         cargarFacturasPendientes();
         cargarGestiones();
@@ -230,6 +270,17 @@
                 $("#conten-comentarios").empty().html(result);
             }
         });
+    }
+    function mostrarComentarios(id_cliente) {
+            $("#clienteid").val(id_cliente);
+            $.ajax({
+                url:"../get_comentario_cliente/?id=" + id_cliente,
+                type:"GET",
+                success:function (result) {
+                    $("#conten-comentarios").empty().html(result);
+                    $("#myModal").modal('show')
+                }
+            });
     }
     function comentar() {
         var comment= $("#post-comment").val();
