catalogo de productos

--- a/app/templates/app/cobranza_cliente.html
+++ b/app/templates/app/cobranza_cliente.html
@@ -113,11 +113,16 @@
                     </div>
                 </div>
                 <div class="panel-body">
+
                     <div class="float-right right align-right">
                          <a id="btnAgregarGestion" style="float: right" class="btn btn-success btn-3d" href="javascript:void(0)"><i class="fa fa-plus fa-fw"></i> Agregar gestion</a>
                     </div>
                     <hr/>
-                    <div id="content-gestiones"></div>
+                    <div class="nano has-scrollbar" style="height:300px">
+                        <div class="nano-content pad-all" tabindex="0" style="right: -17px;">
+                            <div id="content-gestiones"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
