--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -272,7 +272,15 @@
                                 <a href="#"><i class="fa fa-cog"></i> <span class="nav-label">Modulos </span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level collapse">
                                     <li><a href="/app/proformas/"><i class="fa fa-shopping-basket"></i> Proformas</a></li>
-                                    <li><a href="/app/facturacion/"><i class="fa fa-shopping-cart"></i> Facturción</a></li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-shopping-cart"></i> Inventario <span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <li><a href="/app/facturacion/"><i class="fa fa-shopping-cart"></i> Facturción</a></li></li>
+                                                <li><a href="/app/productos/"><i class="fa fa-product-hunt"></i> Productos</a></li></li>
+                                            </li>
+                                        </ul>
+                                    </li>
                                     <li>
                                         <a href="#"><i class="fa fa-money"></i> Cartera <span class="fa arrow"></span></a>
                                         <ul class="nav nav-third-level">
