--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -676,7 +676,7 @@ strong,b,label{
 .lockscreen .form-control{
     border: 0px;
     -webkit-border-radius: 0px;
-    border-radius: 0px;
+    /*border-radius: 0px;*/
     box-shadow: none;
     background-color:#fff;
     -webkit-box-shadow: none;
@@ -935,7 +935,7 @@ ul.wysihtml5-toolbar a.btn.wysihtml5-command-active {
     border-color: rgba(0,0,0,0.1);
 }
 .form-control,.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control{
-    border-radius: 0px;
+    /*border-radius: 0px;*/
     box-shadow: none;
     /*border: 1px solid rgba(0,0,0,0.1);
     color: #999;*/
@@ -1997,10 +1997,10 @@ body .fc {
 }
 
 .form-control {
-    font-size: 11px;
+    /*font-size: 11px;
     height: 100%;
     border-radius: 0;
-    box-shadow: none;
+    box-shadow: none;*/
     /*border: 1px solid #e9e9e9;*/
     transition-duration: .5s;
 }
