--- a/app/templates/inventario/facturacion.html
+++ b/app/templates/inventario/facturacion.html
@@ -218,7 +218,7 @@
             });
 
         }
-        function agregarProductoDetalle(nombre, id_detalle, existencia, precio) {
+        function agregarProductoDetalle(nombre, serie, marca,  id_detalle, existencia, precio) {
             $("#modal-productos").modal('hide');
             $("#myModal").modal('show');
             var rowCount = $('#table_factura_detalle >tbody >tr').length;
