--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -249,19 +249,22 @@
                             <li class="nav-header">
                                 <div class="dropdown side-profile text-left">
                                     <span style="display: block;">
-                                        <img alt="image" class="img-circle" src="/static/app/images/avtar-1.jpg" width="40">
+                                        <img alt="image" class="img-circle" src="{{ user.profile.imagen_url }}" width="50" height="80">
                                     </span>
                                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                                        <span class="clear" style="display: block;"> <span class="block m-t-xs"> <strong class="font-bold">{{user.username}} <b class="caret"></b></strong>
-                                            </span></span> </a>
+                                        <span class="clear" style="display: block;">
+                                            <span class="block m-t-xs"> <strong class="font-bold">{{user.username}} <b class="caret"></b></strong>
+                                            </span>
+                                        </span>
+                                    </a>
                                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                        <li><a href="#"><i class="fa fa-user"></i>My Profile</a></li>
-                                        <li><a href="#"><i class="fa fa-calendar"></i>My Calendar</a></li>
+                                        <li><a href="/app/perfil/"><i class="fa fa-user"></i>Mi Perfil</a></li>
+                                        {% comment %}<li><a href="#"><i class="fa fa-calendar"></i>My Calendar</a></li>
                                         <li><a href="#"><i class="fa fa-envelope"></i>My Inbox</a></li>
-                                        <li><a href="#"><i class="fa fa-barcode"></i>My Task</a></li>
+                                        <li><a href="#"><i class="fa fa-barcode"></i>My Task</a></li>{% endcomment %}
                                         <li class="divider"></li>
-                                        <li><a href="#"><i class="fa fa-lock"></i>Screen lock</a></li>
-                                        <li><a href="#"><i class="fa fa-key"></i>Logout</a></li>
+                                        {#<li><a href="#"><i class="fa fa-lock"></i>Screen lock</a></li>#}
+                                        <li><a href="#"><i class="fa fa-key"></i>Cerrar Sesión</a></li>
                                     </ul>
                                 </div>
                             </li>
