--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -62,7 +62,7 @@
                         <li> <span class="search-icon"><i class="fa fa-search"></i></span>
 
                         </li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle button-wave" data-toggle="dropdown"><i class="fa fa-envelope"></i> <span class="badge badge-xs badge-info">6</span></a>
+                        {% comment %}<li class="dropdown"><a href="#" class="dropdown-toggle button-wave" data-toggle="dropdown"><i class="fa fa-envelope"></i> <span class="badge badge-xs badge-info">6</span></a>
 
                             <ul class="dropdown-menu dropdown-lg">
 
@@ -158,7 +158,7 @@
                                 </li>
                                 <li class="read-more"><a href="#">View All Alerts <i class="fa fa-angle-right"></i></a></li>
                             </ul>
-                        </li>
+                        </li>{% endcomment %}
 
                         <li class="dropdown opt"><a href="#" class="dropdown-toggle button-wave" data-toggle="dropdown"><span class="ti-settings"></span></a>
                             <ul class="dropdown-menu dropdown-lg adminoption" style="display: none;">
